--- a/apple_quality.ipynb
+++ b/apple_quality.ipynb
@@ -809,11 +809,11 @@
    "source": [
     "import pickle\n",
     "\n",
-    "# Sauvegarder le modèle dans un fichier\n",
+    "#Save model\n",
     "with open('Apple_quality.pkl', 'wb') as file:\n",
     "    pickle.dump(clf, file)\n",
     "\n",
-    "# Charger le modèle à partir du fichier\n",
+    "# Load model\n",
     "with open('Apple_quality.pkl', 'rb') as file:\n",
     "    loaded_model = pickle.load(file)\n"
    ]
