--- a/apple_quality.ipynb
+++ b/apple_quality.ipynb
@@ -17,6 +17,51 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Platform: AMD Accelerated Parallel Processing\n",
+      "  Device: gfx90c\n",
+      "    Type: ALL | GPU\n",
+      "    Vendor: Advanced Micro Devices, Inc.\n",
+      "    Max Compute Units: 7\n",
+      "    Global Memory Size: 6222 MB\n",
+      "    Max Clock Frequency: 1600 MHz\n",
+      "    Max Work Group Size: 256\n",
+      "    Max Work Item Sizes: [1024, 1024, 1024]\n",
+      "    OpenCL Version: OpenCL C 2.0 \n",
+      "    Driver Version: 3584.0 (PAL,HSAIL)\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pyopencl as cl\n",
+    "\n",
+    "platforms = cl.get_platforms()\n",
+    "for platform in platforms:\n",
+    "    print(\"Platform:\", platform.name)\n",
+    "    devices = platform.get_devices()\n",
+    "    for device in devices:\n",
+    "        print(\"  Device:\", device.name)\n",
+    "        print(\"    Type:\", cl.device_type.to_string(device.type))\n",
+    "        print(\"    Vendor:\", device.vendor)\n",
+    "        print(\"    Max Compute Units:\", device.max_compute_units)\n",
+    "        print(\"    Global Memory Size:\", device.global_mem_size // (1024*1024), \"MB\")\n",
+    "        print(\"    Max Clock Frequency:\", device.max_clock_frequency, \"MHz\")\n",
+    "        print(\"    Max Work Group Size:\", device.max_work_group_size)\n",
+    "        print(\"    Max Work Item Sizes:\", device.max_work_item_sizes)\n",
+    "        print(\"    OpenCL Version:\", device.opencl_c_version)\n",
+    "        print(\"    Driver Version:\", device.driver_version)\n",
+    "        print()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
